--- a/style/style.css
+++ b/style/style.css
@@ -1,8 +1,6 @@
-#introduction {
-  background: linear-gradient(rgba(100,181,246 ,1), rgba(0,0,0,0.8)), 
-              url('https://drive.google.com/thumbnail?id=1lqPCUUHuAYFsYWdENKpKllH_HlbiIjRc&authuser=0&sz=w1349-h667') 0% 0%/cover 
-}
-
 .fill-viewport {
   min-height: 100vh 
+}
+.text-white-70 {
+  color: rgba(255,255,255,0.7)
 }
